refactor: 迁移到自建服务器后端，移除云开发依赖
- 移除所有云开发相关代码和文件
  - 删除 cloudfunctions/ 目录（所有云函数）
  - 删除 cloudTipModal 组件
  - 删除 envList.js 和 uploadCloudFunction.sh
  - 清理 project.config.json 中的云开发配置

- 迁移到自建 Node.js + MySQL 后端
  - 使用 Express + MySQL2 替代云开发
  - 配置 API 基础路径为 https://drink.loner.cc/api
  - 使用 PM2 管理进程

- 启用 Skyline 渲染引擎
  - 添加 Skyline 配置和 glass-easel 组件框架
  - 优化首页动画效果（数字平滑、水位上升、按钮缩放）

- 新增后端服务代码
  - 完整的 Node.js API 服务
  - MySQL 数据库模型和路由
  - JWT 认证机制
  - 详细的部署文档和安装指南

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -17,7 +17,7 @@
     </view>
     <view class="box1-2">
       <view class="title">今天已喝</view>
-      <view class="info">{{fromData[0].water}}ml</view>
+      <view class="info">{{displayWater}}ml</view>
     </view>
         <view class="box1-3">
       <view class="title">下次提醒</view>
@@ -25,14 +25,17 @@
     </view>
   </view>
   <view class="row">
+    <view class="water-mask">
+      <view class="water-level" style="height: {{displayPercent}}%;"></view>
+    </view>
     <image src="/static/bg.png" class="bg"></image>
     <view class="textbox">
       <view class="title-row">今天已经咕咚了</view>
-      <view class="info-row">{{fromData[0].water}}ml</view>
+      <view class="info-row">{{displayWater}}ml</view>
     </view>
   </view>
   <view class="box2">
-    <view class="box2-1" bindtap="getDrink1">
+    <view class="box2-1" bindtap="getDrink1" hover-class="btn-hover">
       <view class="brow">
         <view class="row1">
           <image src="/static/250.png" class="icon" ></image>
@@ -40,7 +43,7 @@
       </view>
       <view class="rowinfo">250ml</view>
     </view>
-    <view class="box2-2" bindtap="getDrink2">
+    <view class="box2-2" bindtap="getDrink2" hover-class="btn-hover">
       <view class="brow">
         <view class="row1">
           <image src="/static/350.png" class="icon" ></image>
@@ -48,7 +51,7 @@
       </view>
       <view class="rowinfo">350ml</view>
     </view>
-    <view class="box2-3" bindtap="getDrink3">
+    <view class="box2-3" bindtap="getDrink3" hover-class="btn-hover">
       <view class="brow">
         <view class="row1">
           <image src="/static/500.png" class="icon" ></image>
@@ -56,7 +59,7 @@
       </view>
       <view class="rowinfo">500ml</view>
     </view>
-    <view class="box2-4" bindtap="getDrink4">
+    <view class="box2-4" bindtap="getDrink4" hover-class="btn-hover">
       <view class="brow">
         <view class="row1">
           <image src="/static/1000.png" class="icon"></image>
