--- a/miniprogram/pages/mine/mine.wxss
+++ b/miniprogram/pages/mine/mine.wxss
@@ -6,6 +6,7 @@
 .logoin{
   background-image: linear-gradient(#F3F5F8, #fff);
   display: flex;
+  position: relative;
   z-index: 17;
   height: 212rpx;
   margin-top: 200rpx;
@@ -36,7 +37,7 @@
   margin-top: 80rpx;
   margin-left: 40rpx;
   z-index: 33;
-  width: 64rpx;
+  max-width: 320rpx;
   height: 44rpx;
   display: block;
   overflow-wrap: break-word;
@@ -45,7 +46,29 @@
   white-space: nowrap;
   line-height: 44rpx;
   text-align: left;
-
+  overflow: hidden;
+  text-overflow: ellipsis;
+  flex: 1;
+}
+.logout-btn{
+  position: absolute;
+  right: 30rpx;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 34;
+  height: 60rpx;
+  padding: 0 24rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 30rpx;
+  background-color: rgba(234,110,105,1);
+  color: #fff;
+  font-size: 26rpx;
+  box-shadow: 0px 2px 8px 0px rgba(243,188,186,1);
+}
+.logout-btn:active{
+  opacity: 0.8;
 }
 .notic{
   background-image: linear-gradient(#F3F5F8, #fff);
@@ -108,14 +131,70 @@
   flex-direction: column;
   margin-top: 130rpx;
 }
-.back{
+.back-wrapper{
   position: absolute;
   top: 90rpx;
   left: 30rpx;
   z-index: 19;
+  width: 60rpx;
+  height: 60rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.back{
   width: 18rpx;
   height: 36rpx;
-  margin-top: 14rpx;
+}
+.alarm-box{
+  display: flex;
+  z-index: 16;
+  height: 184rpx;
+  border-radius: 12rpx;
+  border: 2px solid rgba(255,255,255,1);
+  box-shadow: 8px 8px 20px 0px rgba(55,99,170,0.1), -8px -8px 20px 0px #fff;
+  box-shadow: 8px 8px 20px 0px rgba(55,99,170,0.1);
+  background-size: 750rpx 288rpx;
+  background-image: linear-gradient(#F3F5F8, #fff);
+  margin: 40rpx  30rpx  0 30rpx ;
+  align-items: center;
+  padding: 0 30rpx;
+}
+.alarm-icon{
+  font-size: 60rpx;
+  margin-right: 30rpx;
+}
+.alarm-content{
+  flex: 1;
+}
+.alarm-title{
+  z-index: 58;
+  height: 40rpx;
+  display: block;
+  overflow-wrap: break-word;
+  color: rgba(152,163,183,1);
+  font-size: 28rpx;
+  white-space: nowrap;
+  line-height: 40rpx;
+  text-align: left;
+  align-self: flex-start;
+  margin-bottom: 10rpx;
+}
+.alarm-desc{
+  z-index: 64;
+  height: 34rpx;
+  display: block;
+  overflow-wrap: break-word;
+  color: rgba(152,163,183,0.8);
+  font-size: 24rpx;
+  white-space: nowrap;
+  line-height: 34rpx;
+  text-align: left;
+}
+.alarm-arrow{
+  font-size: 32rpx;
+  color: rgba(152,163,183,0.6);
 }
 .box{
   display: flex;
