--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -98,6 +98,7 @@
 }
 .box1-3{
   border-radius: 0 12rpx 12rpx 0;
+  cursor: pointer;
 }
 .title{
   z-index: 27;
@@ -122,6 +123,13 @@
   line-height: 44rpx;
   text-align: center;
   text-shadow: 0px 8px 20px rgba(191,217,252,1);
+}
+.info-empty{
+  color: rgba(152,163,183,1);
+  font-size: 28rpx;
+}
+.box-hover{
+  opacity: 0.8;
 }
 .row{
   z-index: 2;
